--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-REACT_APP_BACKEND_URL=https://portfolio-trends.preview.emergentagent.com
+REACT_APP_BACKEND_URL=https://portfolio-trends.preview.78islandtea.com
 WDS_SOCKET_PORT=443
 ENABLE_HEALTH_CHECK=false
